# fork-llamacloud-mcp

./: CHANGES.md  CLAUDE_SETUP.md  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md  debug_script.py  mcp-client.py  mcp_http_server.py  pyproject.toml  simple_mcp_server.py  test_run.bat  update_claude_config.py
backend/api/: mcp_http_server.py
backend/clients/: mcp_async_client.py  mcp_client.py  mcp_client_local.py  mcp_client_remote.py  shared_llama_client.py
backend/llamacloud_mcp/: mcp_server.py
backend/utils/: debug_script.py  pdf_processor.py  update_claude_config.py
config/: .env.example  .env.fallback  claude_desktop_config.json
docs/: API_REFERENCE.md
frontend/server/: __init__.py  frontend_server.py
frontend/static/: index.html
frontend/static/css/: styles.css
frontend/static/js/: app.js  main.js
llamacloud_mcp/: mcp_server.py
scripts/: start_system.py  test_env.py
static/: index.html
tests/: test_backend.py  test_frontend.py
